--- a/Config/Mihomo_lite.yaml
+++ b/Config/Mihomo_lite.yaml
@@ -381,8 +381,8 @@ dns:
     - "https://1.0.0.1/dns-query#h3=true"
     - "https://8.8.8.8/dns-query#h3=true" # Google DNS over H3
     - "https://8.8.4.4/dns-query#h3=true"
-    - "https://185.222.222.222/dns-query#h3=true" # SB DNS over H3
-    - "https://45.11.45.11/dns-query#h3=true"
+#    - "https://185.222.222.222/dns-query#h3=true" # SB DNS over H3
+#    - "https://45.11.45.11/dns-query#h3=true"
     - "quic://94.140.15.15" # AdGuard DNS over DOQ
     - "quic://94.140.14.140"
   proxy-server-nameserver: # 代理节点域名解析服务器，仅用于解析代理节点的域名
